# some_cool_project

./: .gitignore  CMakeLists.txt
data/shaders/: common.glsl  fs_utils.glsl  mesh.fs.glsl  mesh.vs.glsl  postprocess.fs.glsl  postprocess.vs.glsl  sky.fs.glsl  sky.vs.glsl
src/: camera.h  drawable.h  glfw_application.cpp  glfw_application.h  glfw_window.cpp  glfw_window.h  main.cpp  material.h  matrix_stack.h  mesh.h  model_importer.cpp  model_importer.h  node.h  shader_importer.h  texture_importer.cpp  texture_importer.h  utils.h
